refactor: reconfigure maven sunfire javafx plugin to function with testfx